@@ -260,7 +260,7 @@ The following example downloads a file and writes to a file buffer:
 
 .. code-block:: go
 
-   id, err := primitive.ObjectIDFromHex("62f7bd54a6e4452da13b3e88")
+   id, err := bson.ObjectIDFromHex("62f7bd54a6e4452da13b3e88")
    fileBuffer := bytes.NewBuffer(nil)
 
    if _, err := bucket.DownloadToStream(id, fileBuffer); err != nil {
@@ -279,7 +279,7 @@ The following example downloads a file into memory and reads its contents:
 
 .. code-block:: go
 
-   id, err := primitive.ObjectIDFromHex("62f7bd54a6e4452da13b3e88")
+   id, err := bson.ObjectIDFromHex("62f7bd54a6e4452da13b3e88")
    downloadStream, err := bucket.OpenDownloadStream(id)
    if err != nil {
       panic(err)
@@ -303,7 +303,7 @@ The following example renames a file to ``"mongodbTutorial.zip"``:
 
 .. code-block:: go
 
-   id, err := primitive.ObjectIDFromHex("62f7bd54a6e4452da13b3e88")
+   id, err := bson.ObjectIDFromHex("62f7bd54a6e4452da13b3e88")
    if err := bucket.Rename(id, "mongodbTutorial.zip"); err != nil {
        panic(err)
    }
@@ -320,7 +320,7 @@ The following example deletes a file:
 
 .. code-block:: go
 
-   id, err := primitive.ObjectIDFromHex("62f7bd54a6e4452da13b3e88")
+   id, err := bson.ObjectIDFromHex("62f7bd54a6e4452da13b3e88")
    if err := bucket.Delete(id); err != nil {
       panic(err)
    }
